remove unused repository/managers methods